# thread-util

./: CMakeLists.txt
include/: Semaphore.h  Traits.h
src/: CMakeLists.txt  Semaphore.cpp
tester/: CMakeLists.txt  sem_test.cpp
